started Stripe 82 in new multi-notebook format

--- a/dmu4/generate_holes.ipynb
+++ b/dmu4/generate_holes.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we list all the fields including the ra and dec or the first star in the field. We do this because, due to a peculiarity of the pyregion code, we must supply an image header to produce mocs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -52,6 +59,13 @@
     "['xFLS', 261.387059958, 58.0184602211],\n",
     "['XMM-13hr', 203.318355937, 37.4745777866],\n",
     "['XMM-LSS', 32.9413834032, -6.02293494708]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we generate a region file to define all the holes. At present this is very crude and simply puts a 10 arcsec hole over every star brighter than 16 Mag."
    ]
   },
   {
@@ -116,6 +130,13 @@
     "    starmask.create_holes('../dmu0/dmu0_GAIA/data/GAIA_' + field[0] + '.fits',\n",
     "                             'dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '.reg')\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we convert the region files to MOC format. We recomend against using the MOC since, even at this high order, it doesn't capture shape that well. This will become increasingly significant if we have smaller or more detailed shapes in the future."
    ]
   },
   {
@@ -184,20 +205,11 @@
     "for field in fields:\n",
     "    starmask.reg2moc('dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '.reg',\n",
     "            '../dmu2/dmu2_field_coverages/' + field[0] + '_MOC.fits',\n",
-    "            'dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '_O' + str(ORDER) + '17_MOC.fits',\n",
+    "            'dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '_O' + str(ORDER) + '_MOC.fits',\n",
     "            ra_typ=field[1],\n",
     "            dec_typ=field[2],\n",
     "            order=ORDER)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
