It seems that DXS is not available in Herschel Stripe 82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.5_UKIDSS-LAS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.5_UKIDSS-LAS.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ELAIS-N1 master catalogue\n",
-    "## Preparation of UKIRT Infrared Deep Sky Survey / Deep Extragalactic Survey (UKIDSS/DXS)\n",
+    "# Herschel Stripe 82 master catalogue\n",
+    "## Preparation of UKIRT Infrared Deep Sky Survey / Large Area Survey (UKIDSS/LAS)\n",
     "\n",
-    "The catalogue comes from `dmu0_UKIDSS-DXS_DR10plus`.\n",
+    "Information about UKIDSS can be found at http://www.ukidss.org/surveys/surveys.html\n",
+    "\n",
+    "The catalogue comes from `dmu0_UKIDSS-LAS`.\n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
@@ -93,8 +95,8 @@
     "except FileExistsError:\n",
     "    pass\n",
     "\n",
-    "RA_COL = \"dxs_ra\"\n",
-    "DEC_COL = \"dxs_dec\""
+    "RA_COL = \"las_ra\"\n",
+    "DEC_COL = \"las_dec\""
    ]
   },
   {
@@ -120,10 +122,11 @@
     }
    ],
    "source": [
+    "#Is the following standard (different names for radec vs mag)?\n",
     "imported_columns = OrderedDict({\n",
-    "        'sourceid': 'dxs_id',\n",
-    "        'RA': 'dxs_ra',\n",
-    "        'Dec': 'dxs_dec',\n",
+    "        'sourceid': 'las_id',\n",
+    "        'RA': 'las_ra',\n",
+    "        'Dec': 'las_dec',\n",
     "        'JAPERMAG3': 'm_app_ukidss_j',\n",
     "        'JAPERMAG3ERR': 'merr_app_ukidss_j',\n",
     "        'JKRONMAG': 'm_ukidss_j',\n",
@@ -132,11 +135,11 @@
     "        'KAPERMAG3ERR': 'merr_app_ukidss_k',\n",
     "        'KKRONMAG': 'm_ukidss_k',\n",
     "         'KKRONMAGERR': 'merr_ukidss_k',\n",
-    "         'PSTAR': 'dxs_stellarity'\n",
+    "         'PSTAR': 'las_stellarity'\n",
     "    })\n",
     "\n",
     "catalogue = Table.read(\n",
-    "    \"../../dmu0/dmu0_UKIDSS-DXS_DR10plus/data/UKIDSS-DR10plus_ELAIS-N1.fits\")[list(imported_columns)]\n",
+    "    \"../../dmu0/dmu0_UKIDSS-LAS/data/UKIDSS-LAS_Herschel-Stripe-82.fits\")[list(imported_columns)]\n",
     "for column in imported_columns:\n",
     "    catalogue[column].name = imported_columns[column]\n",
     "\n",
@@ -170,7 +173,7 @@
     "        \n",
     "        errcol = \"merr{}\".format(col[1:])\n",
     "        \n",
-    "        # DXS uses a huge negative number for missing values\n",
+    "        # LAS uses a huge negative number for missing values\n",
     "        catalogue[col][catalogue[col] < -100] = np.nan\n",
     "        catalogue[errcol][catalogue[errcol] < -100] = np.nan        \n",
     "\n",
@@ -286,7 +289,7 @@
    ],
    "source": [
     "SORT_COLS = ['merr_app_ukidss_j', 'merr_app_ukidss_k']\n",
-    "FLAG_NAME = 'dxs_flag_cleaned'\n",
+    "FLAG_NAME = 'las_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
     "\n",
@@ -460,7 +463,7 @@
     }
    ],
    "source": [
-    "GAIA_FLAG_NAME = \"dxs_flag_gaia\"\n",
+    "GAIA_FLAG_NAME = \"las_flag_gaia\"\n",
     "\n",
     "catalogue['flag_gaia'].name = GAIA_FLAG_NAME\n",
     "print(\"{} sources flagged.\".format(np.sum(catalogue[GAIA_FLAG_NAME] > 0)))"
@@ -488,7 +491,7 @@
    },
    "outputs": [],
    "source": [
-    "catalogue.write(\"{}/UKIDSS-DXS.fits\".format(OUT_DIR), overwrite=True)"
+    "catalogue.write(\"{}/UKIDSS-LAS.fits\".format(OUT_DIR), overwrite=True)"
    ]
   }
  ],
