Half way through ingestion notebooks for Stripe 82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.1_HSC-SSP.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.1_HSC-SSP.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ELAIS-N1 master catalogue\n",
+    "# Herschel Stripe 82 master catalogue\n",
     "## Preparation of Hyper Suprime-Cam Subaru Strategic Program Catalogues (HSC-SSP) data\n",
     "\n",
     "This catalogue comes from `dmu0_HSC`.\n",
@@ -510,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
