--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.6_PanSTARRS-3SS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.6_PanSTARRS-3SS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ELAIS-N1 master catalogue\n",
+    "# Herschel Stripe 82 master catalogue\n",
     "## Preparation of Pan-STARRS1 - 3pi Steradian Survey (3SS) data\n",
     "\n",
     "This catalogue comes from `dmu0_PanSTARRS1-3SS`.\n",
@@ -142,7 +142,7 @@
     "    })\n",
     "\n",
     "\n",
-    "catalogue = Table.read(\"../../dmu0/dmu0_PanSTARRS1-3SS/data/PanSTARRS1-3SS_ELAIS-N1.fits\")[list(imported_columns)]\n",
+    "catalogue = Table.read(\"../../dmu0/dmu0_PanSTARRS1-3SS/data/PanSTARRS1-3SS_Herschel-Stripe-82.fits\")[list(imported_columns)]\n",
     "for column in imported_columns:\n",
     "    catalogue[column].name = imported_columns[column]\n",
     "\n",
@@ -321,7 +321,7 @@
    },
    "outputs": [],
    "source": [
-    "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_ELAIS-N1.fits\")\n",
+    "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_Herschel-Stripe-82.fits\")\n",
     "gaia_coords = SkyCoord(gaia['ra'], gaia['dec'])"
    ]
   },
@@ -514,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
