Re run ELAIS-N1 holes with Sebs parameters

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.2_VIKING.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.2_VIKING.ipynb
@@ -4,20 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ELAIS-N1 master catalogue\n",
-    "## Preparation of Isaac Newton Telescope / Wide Field Camera (INT/WFC) data\n",
+    "# Herschel Stripe 82 master catalogue\n",
+    "## Preparation of VISTA/VIRCAM VIKING data\n",
     "\n",
-    "Isaac Newton Telescope / Wide Field Camera (INT/WFC) catalogue: the catalogue comes from `dmu0_INTWFC`.\n",
+    "VISTA Telescope / VIRCAM Camera VIKING catalogue: the catalogue comes from `dmu0_VIKING`.\n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
     "- The identifier (it's unique in the catalogue);\n",
     "- The position;\n",
     "- The stellarity;\n",
-    "- The magnitude for each band in apertude 4 ($1.2 * \\sqrt{2}$ arcsec = 1.7 arcsec).\n",
+    "- The magnitude for each band in apertude ???\n",
     "- The kron magnitude to be used as total magnitude (no “auto” magnitude is provided).\n",
-    "\n",
-    "We don't know when the maps have been observed. We will use the year of the reference paper."
+    "\n"
    ]
   },
   {
@@ -91,8 +90,8 @@
     "except FileExistsError:\n",
     "    pass\n",
     "\n",
-    "RA_COL = \"wfc_ra\"\n",
-    "DEC_COL = \"wfc_dec\""
+    "RA_COL = \"viking_ra\"\n",
+    "DEC_COL = \"viking_dec\""
    ]
   },
   {
@@ -501,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
