--- a/dmu4/generate_holes.ipynb
+++ b/dmu4/generate_holes.ipynb
@@ -5,12 +5,33 @@
    "metadata": {},
    "source": [
     "# Generate hole region files\n",
-    "This is currently producing the simplest possible hole regions. For every star brighter than 16 Mag it puts a 10 arcsec circle."
+    "This is currently producing the simplest possible hole regions. For every star brighter than 16 Mag it puts a 10 arcsec circle. It then goes on to produce varying size holes for individual pristine catalogues based on parameters computed by Seb Oliver's IDL code."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This notebook was run with herschelhelp_internal version: \n",
+      "18a938f (Wed Jun 7 18:24:44 2017 +0100) [with local modifications]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from herschelhelp_internal import git_version\n",
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -81,54 +102,58 @@
      "output_type": "stream",
      "text": [
       "There are 62607 GAIA stars in AKARI-NEP\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_AKARI-NEP/data/holes_AKARI-NEP.reg\n",
+      "Starmask written to dmu4_sm_AKARI-NEP/data/10_arcsec_holes_AKARI-NEP.reg\n",
       "There are 39411 GAIA stars in AKARI-SEP\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_AKARI-SEP/data/holes_AKARI-SEP.reg\n",
+      "Starmask written to dmu4_sm_AKARI-SEP/data/10_arcsec_holes_AKARI-SEP.reg\n",
       "There are 35005 GAIA stars in Bootes\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_Bootes/data/holes_Bootes.reg\n",
+      "Starmask written to dmu4_sm_Bootes/data/10_arcsec_holes_Bootes.reg\n",
       "There are 35443 GAIA stars in CDFS-SWIRE\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_CDFS-SWIRE/data/holes_CDFS-SWIRE.reg\n",
+      "Starmask written to dmu4_sm_CDFS-SWIRE/data/10_arcsec_holes_CDFS-SWIRE.reg\n",
       "There are 10709 GAIA stars in COSMOS\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_COSMOS/data/holes_COSMOS.reg\n",
+      "Starmask written to dmu4_sm_COSMOS/data/10_arcsec_holes_COSMOS.reg\n",
       "There are 9542 GAIA stars in EGS\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_EGS/data/holes_EGS.reg\n",
+      "Starmask written to dmu4_sm_EGS/data/10_arcsec_holes_EGS.reg\n",
       "There are 53681 GAIA stars in ELAIS-N1\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_ELAIS-N1/data/holes_ELAIS-N1.reg\n",
+      "Starmask written to dmu4_sm_ELAIS-N1/data/10_arcsec_holes_ELAIS-N1.reg\n",
       "There are 48330 GAIA stars in ELAIS-N2\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_ELAIS-N2/data/holes_ELAIS-N2.reg\n",
+      "Starmask written to dmu4_sm_ELAIS-N2/data/10_arcsec_holes_ELAIS-N2.reg\n",
       "There are 24528 GAIA stars in ELAIS-S1\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_ELAIS-S1/data/holes_ELAIS-S1.reg\n",
+      "Starmask written to dmu4_sm_ELAIS-S1/data/10_arcsec_holes_ELAIS-S1.reg\n",
       "There are 286982 GAIA stars in GAMA-09\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_GAMA-09/data/holes_GAMA-09.reg\n",
+      "Starmask written to dmu4_sm_GAMA-09/data/10_arcsec_holes_GAMA-09.reg\n",
       "There are 193963 GAIA stars in GAMA-12\n",
-      "Starmask (basic 10 arcsec circles) written to dmu4_sm_GAMA-12/data/holes_GAMA-12.reg\n",
-      "There are 238908 GAIA stars in GAMA-15\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-99b37bd34e49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfield\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfields\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     starmask.create_holes('../dmu0/dmu0_GAIA/data/GAIA_' + field[0] + '.fits',\n\u001b[0;32m----> 3\u001b[0;31m                              'dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '.reg')\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rs548/GitHub/herschelhelp_internal/herschelhelp_internal/starmask.py\u001b[0m in \u001b[0;36mcreate_holes\u001b[0;34m(gaia, target, radius)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mstar\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstars\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mstar\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'phot_g_mean_mag'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m16\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     63\u001b[0m             f.writelines('circle ' \n\u001b[1;32m     64\u001b[0m                          \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstar\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ra'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/row.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_table\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mastropy/table/_column_mixins.pyx\u001b[0m in \u001b[0;36mastropy.table._column_mixins._MaskedColumnGetitemShim.__getitem__ (astropy/table/_column_mixins.c:1316)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mastropy/table/_column_mixins.pyx\u001b[0m in \u001b[0;36mastropy.table._column_mixins.base_getitem (astropy/table/_column_mixins.c:992)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mastropy/table/_column_mixins.pyx\u001b[0m in \u001b[0;36mastropy.table._column_mixins.masked_column_getitem (astropy/table/_column_mixins.c:1171)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/numpy/ma/core.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, indx)\u001b[0m\n\u001b[1;32m   3156\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3157\u001b[0m         \"\"\"\n\u001b[0;32m-> 3158\u001b[0;31m         \u001b[0mdout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3159\u001b[0m         \u001b[0;31m# We could directly use ndarray.__getitem__ on self.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3160\u001b[0m         \u001b[0;31m# But then we would have to modify __array_finalize__ to prevent the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py\u001b[0m in \u001b[0;36mdata\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    997\u001b[0m         \u001b[0;31m# The following is necessary because of a bug in Numpy, which was\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    998\u001b[0m         \u001b[0;31m# fixed in numpy/numpy#2703. The fix should be included in Numpy 1.8.0.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 999\u001b[0;31m         \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfill_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfill_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1000\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1001\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/numpy/ma/core.py\u001b[0m in \u001b[0;36m__setattr__\u001b[0;34m(self, attr, value)\u001b[0m\n\u001b[1;32m   3306\u001b[0m         \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3307\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3308\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3309\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMaskedArray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mattr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3310\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mattr\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'dtype'\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_mask\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnomask\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Starmask written to dmu4_sm_GAMA-12/data/10_arcsec_holes_GAMA-12.reg\n",
+      "There are 238908 GAIA stars in GAMA-15\n",
+      "Starmask written to dmu4_sm_GAMA-15/data/10_arcsec_holes_GAMA-15.reg\n",
+      "There are 1556 GAIA stars in HDF-N\n",
+      "Starmask written to dmu4_sm_HDF-N/data/10_arcsec_holes_HDF-N.reg\n",
+      "There are 885551 GAIA stars in Herschel-Stripe-82\n",
+      "Starmask written to dmu4_sm_Herschel-Stripe-82/data/10_arcsec_holes_Herschel-Stripe-82.reg\n",
+      "There are 3444 GAIA stars in Lockman-SWIRE     \n",
+      "Starmask written to dmu4_sm_Lockman-SWIRE/data/10_arcsec_holes_Lockman-SWIRE.reg\n",
+      "There are 428701 GAIA stars in NGP\n",
+      "Starmask written to dmu4_sm_NGP/data/10_arcsec_holes_NGP.reg\n",
+      "There are 670 GAIA stars in SA13\n",
+      "Starmask written to dmu4_sm_SA13/data/10_arcsec_holes_SA13.reg\n",
+      "There are 745580 GAIA stars in SGP\n",
+      "Starmask written to dmu4_sm_SGP/data/10_arcsec_holes_SGP.reg\n",
+      "There are 3554 GAIA stars in SPIRE-NEP\n",
+      "Starmask written to dmu4_sm_SPIRE-NEP/data/10_arcsec_holes_SPIRE-NEP.reg\n",
+      "There are 458084 GAIA stars in SSDF\n",
+      "Starmask written to dmu4_sm_SSDF/data/10_arcsec_holes_SSDF.reg\n",
+      "There are 39625 GAIA stars in xFLS\n",
+      "Starmask written to dmu4_sm_xFLS/data/10_arcsec_holes_xFLS.reg\n",
+      "There are 1757 GAIA stars in XMM-13hr\n",
+      "Starmask written to dmu4_sm_XMM-13hr/data/10_arcsec_holes_XMM-13hr.reg\n",
+      "There are 42203 GAIA stars in XMM-LSS\n",
+      "Starmask written to dmu4_sm_XMM-LSS/data/10_arcsec_holes_XMM-LSS.reg\n"
      ]
     }
    ],
    "source": [
     "for field in fields:\n",
     "    starmask.create_holes('../dmu0/dmu0_GAIA/data/GAIA_' + field[0] + '.fits',\n",
-    "                             'dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '.reg')\n",
+    "                             'dmu4_sm_' + field[0] + '/data/10_arcsec_holes_' + field[0] + '.reg')\n",
     "    \n"
    ]
   },
@@ -137,6 +162,90 @@
    "metadata": {},
    "source": [
     "Then we convert the region files to MOC format. We recomend against using the MOC since, even at this high order, it doesn't capture shape that well. This will become increasingly significant if we have smaller or more detailed shapes in the future."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ORDER=16\n",
+    "for field in fields:\n",
+    "    starmask.reg2moc('dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '.reg',\n",
+    "            '../dmu2/dmu2_field_coverages/' + field[0] + '_MOC.fits',\n",
+    "            'dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '_O' + str(ORDER) + '_MOC.fits',\n",
+    "            ra_typ=field[1],\n",
+    "            dec_typ=field[2],\n",
+    "            order=ORDER)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Produce magnitude varying holes\n",
+    "Then we produce a varying hole parameterised by Seb's code. We define an annulus with a 1 arcsec circle at the centre and an outer radius r_50 (the radius at which the artefact density goes over 0.5 x background density) = 10^(A + B x mag)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 53681 GAIA stars in ELAIS-N1\n",
+      "Starmask written to dmu4_sm_ELAIS-N1/data/holes_ELAIS-N1_megacam_r.reg\n",
+      "There are 53681 GAIA stars in ELAIS-N1\n",
+      "Starmask written to dmu4_sm_ELAIS-N1/data/holes_ELAIS-N1_gpc1_r.reg\n",
+      "There are 53681 GAIA stars in ELAIS-N1\n",
+      "Starmask written to dmu4_sm_ELAIS-N1/data/holes_ELAIS-N1_irac1.reg\n",
+      "There are 53681 GAIA stars in ELAIS-N1\n",
+      "Starmask written to dmu4_sm_ELAIS-N1/data/holes_ELAIS-N1_master.reg\n",
+      "There are 53681 GAIA stars in ELAIS-N1\n",
+      "Starmask written to dmu4_sm_ELAIS-N1/data/holes_ELAIS-N1_suprime_r.reg\n",
+      "There are 53681 GAIA stars in ELAIS-N1\n",
+      "Starmask written to dmu4_sm_ELAIS-N1/data/holes_ELAIS-N1_ukidss_k.reg\n",
+      "There are 53681 GAIA stars in ELAIS-N1\n",
+      "Starmask written to dmu4_sm_ELAIS-N1/data/holes_ELAIS-N1_wfc_r.reg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For now just run ELAIS-N1 with Seb's emailed parameters\n",
+    "# TODO: Implement code to generate params and store them in dmu for all relevant prisitine catalogues/fields.\n",
+    "# Perhaps convert Seb's IDL code to python notebook to generate list of params per catalogue for every field\n",
+    "per_catalogue_params = [\n",
+    "    ['ELAIS-N1', 'megacam_r', 2.21267,  -0.0921318, 17],\n",
+    "    ['ELAIS-N1', 'gpc1_r',    1.78775,  -0.0679605, 13],\n",
+    "    ['ELAIS-N1', 'irac1',     2.64814,  -0.110282,  16], # Taking 16 as faint limit\n",
+    "    ['ELAIS-N1', 'master',    3.64842,  -0.183238,  16], # Taking 16 as faint limit\n",
+    "    ['ELAIS-N1', 'suprime_r', 2.57425,  -0.114519,  16],\n",
+    "    ['ELAIS-N1', 'ukidss_k',  3.70217,  -0.183932,  16], # Taking 16 as faint limit\n",
+    "    ['ELAIS-N1', 'wfc_r',     3.61105,  -0.181665,  14]\n",
+    "]\n",
+    "\n",
+    "for pristine_cat in per_catalogue_params:\n",
+    "    starmask.create_holes('../dmu0/dmu0_GAIA/data/GAIA_' + pristine_cat[0] + '.fits',\n",
+    "                             'dmu4_sm_' + pristine_cat[0] + \n",
+    "                          '/data/holes_' + pristine_cat[0] + '_' + pristine_cat[1] + '.reg',\n",
+    "                         AB = [pristine_cat[2],pristine_cat[3]],\n",
+    "                         mag_lim = pristine_cat[4])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again we convert the region files to MOC format."
    ]
   },
   {
@@ -201,13 +310,14 @@
     }
    ],
    "source": [
-    "ORDER=16\n",
-    "for field in fields:\n",
-    "    starmask.reg2moc('dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '.reg',\n",
-    "            '../dmu2/dmu2_field_coverages/' + field[0] + '_MOC.fits',\n",
-    "            'dmu4_sm_' + field[0] + '/data/holes_' + field[0] + '_O' + str(ORDER) + '_MOC.fits',\n",
-    "            ra_typ=field[1],\n",
-    "            dec_typ=field[2],\n",
+    "ORDER=15\n",
+    "for pristine_cat in per_catalogue_params:\n",
+    "    starmask.reg2moc('dmu4_sm_' + pristine_cat[0] + \n",
+    "                          '/data/holes_' + pristine_cat[0] + '_' + pristine_cat[1] + '.reg',\n",
+    "            '../dmu2/dmu2_field_coverages/' + pristine_cat[0] + '_MOC.fits',\n",
+    "            'dmu4_sm_' + pristine_cat[0] + '/data/holes_' + pristine_cat[0] + '_O' + str(ORDER) + '_MOC.fits',\n",
+    "            ra_typ=fields[6][1],\n",
+    "            dec_typ=fields[6][2],\n",
     "            order=ORDER)"
    ]
   }
