[dmu1_ml_ELAIS-N1] Aperture takes only one p...

--- a/dmu1/dmu1_ml_ELAIS-N1/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/3_Checks_and_diagnostics.ipynb
@@ -191,7 +191,7 @@
    ],
    "source": [
     "nb_compare_plot(\n",
-    "    master_catalogue['m_app_wfc_u'], master_catalogue['m_app_cfht_megacam_u'],\n",
+    "    master_catalogue['m_ap_wfc_u'], master_catalogue['m_ap_cfht_megacam_u'],\n",
     "    (\"WFC u aperture magnitude\", \"CHTL u aperture magnitude\")\n",
     ")"
    ]
@@ -241,7 +241,7 @@
    ],
    "source": [
     "nb_compare_plot(\n",
-    "    master_catalogue['m_app_wfc_g'], master_catalogue['m_app_cfht_megacam_g'],\n",
+    "    master_catalogue['m_ap_wfc_g'], master_catalogue['m_ap_cfht_megacam_g'],\n",
     "    (\"WFC g aperture magnitude\", \"CHTL g aperture magnitude\")\n",
     ")"
    ]
