--- a/dmu1/dmu1_ml_ELAIS-N1/1.1_INT-WFC.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/1.1_INT-WFC.ipynb
@@ -115,23 +115,23 @@
     "        'ra': \"wfc_ra\",\n",
     "        'decl': \"wfc_dec\",\n",
     "        'pstar':  \"wfc_stellarity\",\n",
-    "        'umag4': \"m_app_wfc_u\", \n",
+    "        'umag4': \"m_ap_wfc_u\", \n",
     "        'uemag4': \"merr_app_wfc_u\", \n",
     "        'ukronmag': \"m_wfc_u\", \n",
     "        'uekronmag': \"merr_wfc_u\",\n",
-    "        'gmag4': \"m_app_wfc_g\", \n",
+    "        'gmag4': \"m_ap_wfc_g\", \n",
     "        'gemag4': \"merr_app_wfc_g\", \n",
     "        'gkronmag': \"m_wfc_g\", \n",
     "        'gekronmag': \"merr_wfc_g\",\n",
-    "        'rmag4': \"m_app_wfc_r\", \n",
+    "        'rmag4': \"m_ap_wfc_r\", \n",
     "        'remag4': \"merr_app_wfc_r\", \n",
     "        'rkronmag': \"m_wfc_r\", \n",
     "        'rekronmag': \"merr_wfc_r\",\n",
-    "        'imag4': \"m_app_wfc_i\", \n",
+    "        'imag4': \"m_ap_wfc_i\", \n",
     "        'iemag4': \"merr_app_wfc_i\", \n",
     "        'ikronmag': \"m_wfc_i\", \n",
     "        'iekronmag': \"merr_wfc_i\",\n",
-    "        'zmag4': \"m_app_wfc_z\", \n",
+    "        'zmag4': \"m_ap_wfc_z\", \n",
     "        'zemag4': \"merr_app_wfc_z\", \n",
     "        'zkronmag': \"m_wfc_z\", \n",
     "        'zekronmag': \"merr_wfc_z\"\n",
@@ -201,7 +201,7 @@
       "text/html": [
        "&lt;Table length=10&gt;\n",
        "<table id=\"table140699480596944-744358\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>wfc_id</th><th>wfc_ra</th><th>wfc_dec</th><th>wfc_stellarity</th><th>m_app_wfc_u</th><th>merr_app_wfc_u</th><th>m_wfc_u</th><th>merr_wfc_u</th><th>m_app_wfc_g</th><th>merr_app_wfc_g</th><th>m_wfc_g</th><th>merr_wfc_g</th><th>m_app_wfc_r</th><th>merr_app_wfc_r</th><th>m_wfc_r</th><th>merr_wfc_r</th><th>m_app_wfc_i</th><th>merr_app_wfc_i</th><th>m_wfc_i</th><th>merr_wfc_i</th><th>m_app_wfc_z</th><th>merr_app_wfc_z</th><th>m_wfc_z</th><th>merr_wfc_z</th><th>f_app_wfc_u</th><th>ferr_app_wfc_u</th><th>f_wfc_u</th><th>ferr_wfc_u</th><th>flag_wfc_u</th><th>f_app_wfc_g</th><th>ferr_app_wfc_g</th><th>f_wfc_g</th><th>ferr_wfc_g</th><th>flag_wfc_g</th><th>f_app_wfc_r</th><th>ferr_app_wfc_r</th><th>f_wfc_r</th><th>ferr_wfc_r</th><th>flag_wfc_r</th><th>f_app_wfc_i</th><th>ferr_app_wfc_i</th><th>f_wfc_i</th><th>ferr_wfc_i</th><th>flag_wfc_i</th><th>f_app_wfc_z</th><th>ferr_app_wfc_z</th><th>f_wfc_z</th><th>ferr_wfc_z</th><th>flag_wfc_z</th></tr></thead>\n",
+       "<thead><tr><th>idx</th><th>wfc_id</th><th>wfc_ra</th><th>wfc_dec</th><th>wfc_stellarity</th><th>m_ap_wfc_u</th><th>merr_app_wfc_u</th><th>m_wfc_u</th><th>merr_wfc_u</th><th>m_ap_wfc_g</th><th>merr_app_wfc_g</th><th>m_wfc_g</th><th>merr_wfc_g</th><th>m_ap_wfc_r</th><th>merr_app_wfc_r</th><th>m_wfc_r</th><th>merr_wfc_r</th><th>m_ap_wfc_i</th><th>merr_app_wfc_i</th><th>m_wfc_i</th><th>merr_wfc_i</th><th>m_ap_wfc_z</th><th>merr_app_wfc_z</th><th>m_wfc_z</th><th>merr_wfc_z</th><th>f_app_wfc_u</th><th>ferr_app_wfc_u</th><th>f_wfc_u</th><th>ferr_wfc_u</th><th>flag_wfc_u</th><th>f_app_wfc_g</th><th>ferr_app_wfc_g</th><th>f_wfc_g</th><th>ferr_wfc_g</th><th>flag_wfc_g</th><th>f_app_wfc_r</th><th>ferr_app_wfc_r</th><th>f_wfc_r</th><th>ferr_wfc_r</th><th>flag_wfc_r</th><th>f_app_wfc_i</th><th>ferr_app_wfc_i</th><th>f_wfc_i</th><th>ferr_wfc_i</th><th>flag_wfc_i</th><th>f_app_wfc_z</th><th>ferr_app_wfc_z</th><th>f_wfc_z</th><th>ferr_wfc_z</th><th>flag_wfc_z</th></tr></thead>\n",
        "<tr><td>0</td><td>189636200346</td><td>240.538272005</td><td>55.885030264</td><td>0.000171437</td><td>23.875</td><td>0.235</td><td>23.997</td><td>0.488</td><td>22.656</td><td>0.045</td><td>22.623</td><td>0.052</td><td>21.355</td><td>0.037</td><td>21.453</td><td>0.037</td><td>21.057</td><td>0.05</td><td>21.187</td><td>0.046</td><td>20.648</td><td>0.084</td><td>20.799</td><td>0.088</td><td>1.02329</td><td>0.221484</td><td>0.914534</td><td>0.411051</td><td>False</td><td>3.14485</td><td>0.130343</td><td>3.24191</td><td>0.155267</td><td>False</td><td>10.4232</td><td>0.355204</td><td>9.52358</td><td>0.324547</td><td>False</td><td>13.7151</td><td>0.631606</td><td>12.1675</td><td>0.515506</td><td>False</td><td>19.9894</td><td>1.54652</td><td>17.394</td><td>1.40980223659</td><td>False</td></tr>\n",
        "<tr><td>1</td><td>189636201299</td><td>240.616100794</td><td>55.770734294</td><td>0.00306748</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>24.079</td><td>0.22</td><td>23.528</td><td>0.2</td><td>23.23</td><td>0.18</td><td>23.004</td><td>0.204</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>0.848007</td><td>0.17183</td><td>1.40864</td><td>0.259481</td><td>False</td><td>1.85353</td><td>0.30729</td><td>2.28244</td><td>0.42885</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td></tr>\n",
        "<tr><td>2</td><td>189636201298</td><td>240.703609131</td><td>55.770877382</td><td>0.486486</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>23.967</td><td>0.199</td><td>23.985</td><td>0.256</td><td>23.534</td><td>0.238</td><td>23.476</td><td>0.339</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>0.940157</td><td>0.172317</td><td>0.924697</td><td>0.218029</td><td>False</td><td>1.40088</td><td>0.30708</td><td>1.47775</td><td>0.461398</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td></tr>\n",
