[dmu1_ml_ELAIS-N1] s/merr_app/merr_ap/

--- a/dmu1/dmu1_ml_ELAIS-N1/1.5_SpARCS.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/1.5_SpARCS.ipynb
@@ -590,7 +590,7 @@
     "    ))\n",
     "    catalogue.add_column(Column(\n",
     "        data = magerr_aper.data,\n",
-    "        name = \"merr_app_cfht_megacam_{}\".format(band)\n",
+    "        name = \"merr_ap_cfht_megacam_{}\".format(band)\n",
     "    ))\n",
     "    \n",
     "    # Computing the aperture flux columns\n",
@@ -655,7 +655,7 @@
       "text/html": [
        "&lt;Table masked=True length=10&gt;\n",
        "<table id=\"table140301898106920-268611\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>sparcs_intid</th><th>sparcs_ra</th><th>sparcs_dec</th><th>sparcs_stellarity</th><th>m_ap_cfht_megacam_u</th><th>merr_app_cfht_megacam_u</th><th>f_app_cfht_megacam_u</th><th>ferr_app_cfht_megacam_u</th><th>m_cfht_megacam_u</th><th>merr_cfht_megacam_u</th><th>f_cfht_megacam_u</th><th>ferr_cfht_megacam_u</th><th>flag_cfht_megacam_u</th><th>m_ap_cfht_megacam_g</th><th>merr_app_cfht_megacam_g</th><th>f_app_cfht_megacam_g</th><th>ferr_app_cfht_megacam_g</th><th>m_cfht_megacam_g</th><th>merr_cfht_megacam_g</th><th>f_cfht_megacam_g</th><th>ferr_cfht_megacam_g</th><th>flag_cfht_megacam_g</th><th>m_ap_cfht_megacam_r</th><th>merr_app_cfht_megacam_r</th><th>f_app_cfht_megacam_r</th><th>ferr_app_cfht_megacam_r</th><th>m_cfht_megacam_r</th><th>merr_cfht_megacam_r</th><th>f_cfht_megacam_r</th><th>ferr_cfht_megacam_r</th><th>flag_cfht_megacam_r</th><th>m_ap_cfht_megacam_z</th><th>merr_app_cfht_megacam_z</th><th>f_app_cfht_megacam_z</th><th>ferr_app_cfht_megacam_z</th><th>m_cfht_megacam_z</th><th>merr_cfht_megacam_z</th><th>f_cfht_megacam_z</th><th>ferr_cfht_megacam_z</th><th>flag_cfht_megacam_z</th></tr></thead>\n",
+       "<thead><tr><th>idx</th><th>sparcs_intid</th><th>sparcs_ra</th><th>sparcs_dec</th><th>sparcs_stellarity</th><th>m_ap_cfht_megacam_u</th><th>merr_ap_cfht_megacam_u</th><th>f_app_cfht_megacam_u</th><th>ferr_app_cfht_megacam_u</th><th>m_cfht_megacam_u</th><th>merr_cfht_megacam_u</th><th>f_cfht_megacam_u</th><th>ferr_cfht_megacam_u</th><th>flag_cfht_megacam_u</th><th>m_ap_cfht_megacam_g</th><th>merr_ap_cfht_megacam_g</th><th>f_app_cfht_megacam_g</th><th>ferr_app_cfht_megacam_g</th><th>m_cfht_megacam_g</th><th>merr_cfht_megacam_g</th><th>f_cfht_megacam_g</th><th>ferr_cfht_megacam_g</th><th>flag_cfht_megacam_g</th><th>m_ap_cfht_megacam_r</th><th>merr_ap_cfht_megacam_r</th><th>f_app_cfht_megacam_r</th><th>ferr_app_cfht_megacam_r</th><th>m_cfht_megacam_r</th><th>merr_cfht_megacam_r</th><th>f_cfht_megacam_r</th><th>ferr_cfht_megacam_r</th><th>flag_cfht_megacam_r</th><th>m_ap_cfht_megacam_z</th><th>merr_ap_cfht_megacam_z</th><th>f_app_cfht_megacam_z</th><th>ferr_app_cfht_megacam_z</th><th>m_cfht_megacam_z</th><th>merr_cfht_megacam_z</th><th>f_cfht_megacam_z</th><th>ferr_cfht_megacam_z</th><th>flag_cfht_megacam_z</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>2966095</td><td>238.578281367</td><td>54.5688610919</td><td>0.398459</td><td>26.7906</td><td>0.139887</td><td>0.0697855</td><td>0.00899124</td><td>27.0903</td><td>0.120026</td><td>0.0529503</td><td>0.00585355</td><td>False</td><td>25.7982</td><td>0.037858</td><td>0.174068</td><td>0.00606949</td><td>26.1907</td><td>0.03532</td><td>0.121258</td><td>0.00394464</td><td>False</td><td>25.801</td><td>0.0653121</td><td>0.173623</td><td>0.0104442</td><td>26.1815</td><td>0.0603181</td><td>0.122293</td><td>0.00679398</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td></tr>\n",
        "<tr><td>1</td><td>2966096</td><td>238.578597424</td><td>54.5708532896</td><td>0.597076</td><td>25.6395</td><td>0.0514591</td><td>0.201465</td><td>0.00954857</td><td>26.4015</td><td>0.059117</td><td>0.0998604</td><td>0.00543728</td><td>False</td><td>25.3391</td><td>0.0254052</td><td>0.265677</td><td>0.00621659</td><td>26.0672</td><td>0.0280849</td><td>0.135872</td><td>0.00351463</td><td>False</td><td>25.8146</td><td>0.0665981</td><td>0.17146</td><td>0.0105172</td><td>26.2789</td><td>0.0577999</td><td>0.111804</td><td>0.00595197</td><td>False</td><td>24.6233</td><td>0.0753086</td><td>0.513686</td><td>0.0356302</td><td>25.5474</td><td>0.0983685</td><td>0.219297</td><td>0.0198685</td><td>False</td></tr>\n",
@@ -739,8 +739,8 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_app_cfht_megacam_r', 'merr_app_cfht_megacam_u',\n",
-    "              'merr_app_cfht_megacam_g', 'merr_app_cfht_megacam_z']\n",
+    "SORT_COLS = ['merr_ap_cfht_megacam_r', 'merr_ap_cfht_megacam_u',\n",
+    "              'merr_ap_cfht_megacam_g', 'merr_ap_cfht_megacam_z']\n",
     "FLAG_NAME = 'sparcs_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
