--- a/dmu1/dmu1_ml_ELAIS-N1/1.4_PanSTARRS-3SS.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/1.4_PanSTARRS-3SS.ipynb
@@ -120,23 +120,23 @@
     "        \"raMean\": \"ps1_ra\",\n",
     "        \"decMean\": \"ps1_dec\",\n",
     "        \"gApMag\": \"m_ap_gpc1_g\",\n",
-    "        \"gApMagErr\": \"merr_app_gpc1_g\",\n",
+    "        \"gApMagErr\": \"merr_ap_gpc1_g\",\n",
     "        \"gKronMag\": \"m_gpc1_g\",\n",
     "        \"gKronMagErr\": \"merr_gpc1_g\",\n",
     "        \"rApMag\": \"m_ap_gpc1_r\",\n",
-    "        \"rApMagErr\": \"merr_app_gpc1_r\",\n",
+    "        \"rApMagErr\": \"merr_ap_gpc1_r\",\n",
     "        \"rKronMag\": \"m_gpc1_r\",\n",
     "        \"rKronMagErr\": \"merr_gpc1_r\",\n",
     "        \"iApMag\": \"m_ap_gpc1_i\",\n",
-    "        \"iApMagErr\": \"merr_app_gpc1_i\",\n",
+    "        \"iApMagErr\": \"merr_ap_gpc1_i\",\n",
     "        \"iKronMag\": \"m_gpc1_i\",\n",
     "        \"iKronMagErr\": \"merr_gpc1_i\",\n",
     "        \"zApMag\": \"m_ap_gpc1_z\",\n",
-    "        \"zApMagErr\": \"merr_app_gpc1_z\",\n",
+    "        \"zApMagErr\": \"merr_ap_gpc1_z\",\n",
     "        \"zKronMag\": \"m_gpc1_z\",\n",
     "        \"zKronMagErr\": \"merr_gpc1_z\",\n",
     "        \"yApMag\": \"m_ap_gpc1_y\",\n",
-    "        \"yApMagErr\": \"merr_app_gpc1_y\",\n",
+    "        \"yApMagErr\": \"merr_ap_gpc1_y\",\n",
     "        \"yKronMag\": \"m_gpc1_y\",\n",
     "        \"yKronMagErr\": \"merr_gpc1_y\"\n",
     "    })\n",
@@ -205,7 +205,7 @@
       "text/html": [
        "&lt;Table masked=True length=10&gt;\n",
        "<table id=\"table140601861390744-578410\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>ps1_id</th><th>ps1_ra</th><th>ps1_dec</th><th>m_ap_gpc1_g</th><th>merr_app_gpc1_g</th><th>m_gpc1_g</th><th>merr_gpc1_g</th><th>m_ap_gpc1_r</th><th>merr_app_gpc1_r</th><th>m_gpc1_r</th><th>merr_gpc1_r</th><th>m_ap_gpc1_i</th><th>merr_app_gpc1_i</th><th>m_gpc1_i</th><th>merr_gpc1_i</th><th>m_ap_gpc1_z</th><th>merr_app_gpc1_z</th><th>m_gpc1_z</th><th>merr_gpc1_z</th><th>m_ap_gpc1_y</th><th>merr_app_gpc1_y</th><th>m_gpc1_y</th><th>merr_gpc1_y</th><th>f_app_gpc1_g</th><th>ferr_app_gpc1_g</th><th>f_gpc1_g</th><th>ferr_gpc1_g</th><th>flag_gpc1_g</th><th>f_app_gpc1_r</th><th>ferr_app_gpc1_r</th><th>f_gpc1_r</th><th>ferr_gpc1_r</th><th>flag_gpc1_r</th><th>f_app_gpc1_i</th><th>ferr_app_gpc1_i</th><th>f_gpc1_i</th><th>ferr_gpc1_i</th><th>flag_gpc1_i</th><th>f_app_gpc1_z</th><th>ferr_app_gpc1_z</th><th>f_gpc1_z</th><th>ferr_gpc1_z</th><th>flag_gpc1_z</th><th>f_app_gpc1_y</th><th>ferr_app_gpc1_y</th><th>f_gpc1_y</th><th>ferr_gpc1_y</th><th>flag_gpc1_y</th></tr></thead>\n",
+       "<thead><tr><th>idx</th><th>ps1_id</th><th>ps1_ra</th><th>ps1_dec</th><th>m_ap_gpc1_g</th><th>merr_ap_gpc1_g</th><th>m_gpc1_g</th><th>merr_gpc1_g</th><th>m_ap_gpc1_r</th><th>merr_ap_gpc1_r</th><th>m_gpc1_r</th><th>merr_gpc1_r</th><th>m_ap_gpc1_i</th><th>merr_ap_gpc1_i</th><th>m_gpc1_i</th><th>merr_gpc1_i</th><th>m_ap_gpc1_z</th><th>merr_ap_gpc1_z</th><th>m_gpc1_z</th><th>merr_gpc1_z</th><th>m_ap_gpc1_y</th><th>merr_ap_gpc1_y</th><th>m_gpc1_y</th><th>merr_gpc1_y</th><th>f_app_gpc1_g</th><th>ferr_app_gpc1_g</th><th>f_gpc1_g</th><th>ferr_gpc1_g</th><th>flag_gpc1_g</th><th>f_app_gpc1_r</th><th>ferr_app_gpc1_r</th><th>f_gpc1_r</th><th>ferr_gpc1_r</th><th>flag_gpc1_r</th><th>f_app_gpc1_i</th><th>ferr_app_gpc1_i</th><th>f_gpc1_i</th><th>ferr_gpc1_i</th><th>flag_gpc1_i</th><th>f_app_gpc1_z</th><th>ferr_app_gpc1_z</th><th>f_gpc1_z</th><th>ferr_gpc1_z</th><th>flag_gpc1_z</th><th>f_app_gpc1_y</th><th>ferr_app_gpc1_y</th><th>f_gpc1_y</th><th>ferr_gpc1_y</th><th>flag_gpc1_y</th></tr></thead>\n",
        "<tr><td>0</td><td>171032431403638729</td><td>243.14041998</td><td>52.53177078</td><td>22.8425006866</td><td>0.0150380004197</td><td>nan</td><td>nan</td><td>21.2828006744</td><td>0.00675900001079</td><td>21.5000991821</td><td>0.0519939996302</td><td>20.4915008545</td><td>0.00306700007059</td><td>nan</td><td>nan</td><td>20.03840065</td><td>0.00481100007892</td><td>20.4412994385</td><td>0.0567979998887</td><td>19.720500946</td><td>0.0038610000629</td><td>20.1007995605</td><td>0.0728219971061</td><td>2.64849846363</td><td>0.0366830550858</td><td>nan</td><td>nan</td><td>False</td><td>11.1398599318</td><td>0.0693486254481</td><td>9.11927530865</td><td>0.436706075516</td><td>False</td><td>23.0887094299</td><td>0.0652212509271</td><td>nan</td><td>nan</td><td>False</td><td>35.0461035632</td><td>0.155292608158</td><td>24.1813322689</td><td>1.26499540266</td><td>False</td><td>46.9677354942</td><td>0.167022550139</td><td>33.0887358849</td><td>2.21931240599</td><td>False</td></tr>\n",
        "<tr><td>1</td><td>171032431416139697</td><td>243.1416353</td><td>52.53237574</td><td>21.6130008698</td><td>0.00853700004518</td><td>22.2987995148</td><td>0.097281999886</td><td>20.9708003998</td><td>0.00585399987176</td><td>21.5447998047</td><td>0.0622039996088</td><td>21.0387992859</td><td>0.00394599977881</td><td>21.2439994812</td><td>0.0373860001564</td><td>21.3966007233</td><td>0.00899199955165</td><td>nan</td><td>nan</td><td>20.378200531</td><td>0.00522699998692</td><td>nan</td><td>nan</td><td>8.21863422018</td><td>0.0646220328672</td><td>4.3699874938</td><td>0.391551024099</td><td>False</td><td>14.8484062098</td><td>0.0800586437727</td><td>8.75145125471</td><td>0.501388153069</td><td>False</td><td>13.9469834529</td><td>0.0506889181544</td><td>11.5451666859</td><td>0.397543714239</td><td>False</td><td>10.031357558</td><td>0.0830790778357</td><td>nan</td><td>nan</td><td>False</td><td>25.6282993202</td><td>0.123380909308</td><td>nan</td><td>nan</td><td>False</td></tr>\n",
        "<tr><td>2</td><td>171032432095675207</td><td>243.20960574</td><td>52.5287987</td><td>21.4094009399</td><td>0.00777200004086</td><td>21.4832000732</td><td>0.0547470003366</td><td>20.7164993286</td><td>0.00520699983463</td><td>20.7583007812</td><td>0.0337070003152</td><td>20.5615997314</td><td>0.00316699990071</td><td>20.5648994446</td><td>0.0306560005993</td><td>20.2789001465</td><td>0.00537399994209</td><td>20.3565006256</td><td>0.0726239979267</td><td>20.2164993286</td><td>0.00485200015828</td><td>20.3504009247</td><td>0.12225099653</td><td>9.91378791928</td><td>0.0709656358295</td><td>9.26232404213</td><td>0.467042045048</td><td>False</td><td>18.7672339786</td><td>0.090004352618</td><td>18.0584174195</td><td>0.560628888475</td><td>False</td><td>21.6451254599</td><td>0.0631369847316</td><td>21.5794425783</td><td>0.609300308595</td><td>False</td><td>28.0827698923</td><td>0.138999513062</td><td>26.1456684567</td><td>1.74886216696</td><td>False</td><td>29.7440613741</td><td>0.132921965633</td><td>26.2929690456</td><td>2.960518083</td><td>False</td></tr>\n",
@@ -290,7 +290,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_app_gpc1_r', 'merr_app_gpc1_g', 'merr_app_gpc1_i', 'merr_app_gpc1_z', 'merr_app_gpc1_y']\n",
+    "SORT_COLS = ['merr_ap_gpc1_r', 'merr_ap_gpc1_g', 'merr_ap_gpc1_i', 'merr_ap_gpc1_z', 'merr_ap_gpc1_y']\n",
     "FLAG_NAME = 'ps1_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
