minor changes to Stripe 82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.7_SHELA.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.7_SHELA.ipynb
@@ -11,11 +11,10 @@
     "\n",
     "In the catalouge, we keep:\n",
     "\n",
-    "- The internal identifier (this one is only in HeDaM data);\n",
+    "- The internal identifier;\n",
     "- The position;\n",
-    "- The fluxes in aperture 2 (1.9 arcsec);\n",
-    "- The “auto” flux (which seems to be the Kron flux);\n",
-    "- The stellarity in each band\n"
+    "- The fluxes in 4 arcsecond apertures;\n",
+    "- The “auto” flux;\n"
    ]
   },
   {
@@ -99,20 +98,22 @@
    },
    "outputs": [],
    "source": [
+    "#IRAC1 = 3.6 um\n",
+    "#IRAC2 = 4.5 um\n",
+    "#No stelarity \n",
+    "\n",
     "imported_columns = OrderedDict({\n",
-    "        'internal_id': \"shela_intid\",\n",
-    "        'ra_12': \"shela_ra\",\n",
-    "        'dec_12': \"shela_dec\",\n",
-    "        'flux_aper_2_1': \"f_app_shela_irac1\",\n",
-    "        'fluxerr_aper_2_1': \"ferr_app_shela_irac1\",\n",
-    "        'flux_auto_1': \"f_shela_irac1\",\n",
-    "        'fluxerr_auto_1': \"ferr_shela_irac1\",\n",
-    "        'class_star_1': \"shela_stellarity_irac1\",\n",
-    "        'flux_aper_2_2': \"f_app_shela_irac2\",\n",
-    "        'fluxerr_aper_2_2': \"ferr_app_shela_irac2\",\n",
-    "        'flux_auto_2': \"f_shela_irac2\",\n",
-    "        'fluxerr_auto_2': \"ferr_shela_irac2\",\n",
-    "        'class_star_2': \"shela_stellarity_irac2\",\n",
+    "        'ID': \"shela_intid\",\n",
+    "        'RA': \"shela_ra\",\n",
+    "        'DEC': \"shela_dec\",\n",
+    "        'F3P6_AUTO': \"f_shela_irac1\",\n",
+    "        'F3P6ERR_AUTO': \"ferr_shela_irac1\"\n",
+    "        'F3P6_4ARCS': \"f_ap_shela_irac1\",\n",
+    "        'F3P6ERR_4ARCS': \"ferr_ap_shela_irac1\",\n",
+    "        'F4P5_AUTO': \"f_shela_irac2\",\n",
+    "        'F4P5ERR_AUTO': \"ferr_shela_irac2\"\n",
+    "        'F4P5_4ARCS': \"f_ap_shela_irac2\",\n",
+    "        'F4P5ERR_4ARCS': \"ferr_ap_shela_irac2\"\n",
     "    })\n",
     "\n",
     "\n",
@@ -156,7 +157,7 @@
     "        catalogue.add_column(Column(error, name=\"m{}\".format(errcol[1:])))\n",
     "        \n",
     "        # Band-flag column\n",
-    "        if \"app\" not in col:\n",
+    "        if \"ap\" not in col:\n",
     "            catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag{}\".format(col[1:])))\n"
    ]
   },
@@ -258,7 +259,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['ferr_app_shela_irac1', 'ferr_app_shela_irac2']\n",
+    "SORT_COLS = ['ferr_ap_shela_irac1', 'ferr_ap_shela_irac2']\n",
     "FLAG_NAME = \"shela_flag_cleaned\"\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
@@ -289,7 +290,7 @@
    },
    "outputs": [],
    "source": [
-    "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_ELAIS-N1.fits\")\n",
+    "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_Herschel-Stripe-82.fits\")\n",
     "gaia_coords = SkyCoord(gaia['ra'], gaia['dec'])"
    ]
   },
