[dmu1_ml_ELAIS-N1] More app → ap

--- a/dmu1/dmu1_ml_ELAIS-N1/1.6_SERVS.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/1.6_SERVS.ipynb
@@ -98,13 +98,13 @@
     "        'internal_id': \"servs_intid\",\n",
     "        'ra_12': \"servs_ra\",\n",
     "        'dec_12': \"servs_dec\",\n",
-    "        'flux_aper_2_1': \"f_app_servs_irac1\",\n",
-    "        'fluxerr_aper_2_1': \"ferr_app_servs_irac1\",\n",
+    "        'flux_aper_2_1': \"f_ap_servs_irac1\",\n",
+    "        'fluxerr_aper_2_1': \"ferr_ap_servs_irac1\",\n",
     "        'flux_auto_1': \"f_servs_irac1\",\n",
     "        'fluxerr_auto_1': \"ferr_servs_irac1\",\n",
     "        'class_star_1': \"servs_stellarity_irac1\",\n",
-    "        'flux_aper_2_2': \"f_app_servs_irac2\",\n",
-    "        'fluxerr_aper_2_2': \"ferr_app_servs_irac2\",\n",
+    "        'flux_aper_2_2': \"f_ap_servs_irac2\",\n",
+    "        'fluxerr_aper_2_2': \"ferr_ap_servs_irac2\",\n",
     "        'flux_auto_2': \"f_servs_irac2\",\n",
     "        'fluxerr_auto_2': \"ferr_servs_irac2\",\n",
     "        'class_star_2': \"servs_stellarity_irac2\",\n",
@@ -163,7 +163,7 @@
       "text/html": [
        "&lt;Table masked=True length=10&gt;\n",
        "<table id=\"table140128541788760-619869\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>servs_intid</th><th>servs_ra</th><th>servs_dec</th><th>f_app_servs_irac1</th><th>ferr_app_servs_irac1</th><th>f_servs_irac1</th><th>ferr_servs_irac1</th><th>servs_stellarity_irac1</th><th>f_app_servs_irac2</th><th>ferr_app_servs_irac2</th><th>f_servs_irac2</th><th>ferr_servs_irac2</th><th>servs_stellarity_irac2</th><th>m_ap_servs_irac1</th><th>merr_ap_servs_irac1</th><th>m_servs_irac1</th><th>merr_servs_irac1</th><th>flag_servs_irac1</th><th>m_ap_servs_irac2</th><th>merr_ap_servs_irac2</th><th>m_servs_irac2</th><th>merr_servs_irac2</th><th>flag_servs_irac2</th></tr></thead>\n",
+       "<thead><tr><th>idx</th><th>servs_intid</th><th>servs_ra</th><th>servs_dec</th><th>f_ap_servs_irac1</th><th>ferr_ap_servs_irac1</th><th>f_servs_irac1</th><th>ferr_servs_irac1</th><th>servs_stellarity_irac1</th><th>f_ap_servs_irac2</th><th>ferr_ap_servs_irac2</th><th>f_servs_irac2</th><th>ferr_servs_irac2</th><th>servs_stellarity_irac2</th><th>m_ap_servs_irac1</th><th>merr_ap_servs_irac1</th><th>m_servs_irac1</th><th>merr_servs_irac1</th><th>flag_servs_irac1</th><th>m_ap_servs_irac2</th><th>merr_ap_servs_irac2</th><th>m_servs_irac2</th><th>merr_servs_irac2</th><th>flag_servs_irac2</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>1214684</td><td>244.3568301</td><td>54.2574598</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>38.9957758098</td><td>2.42791861385</td><td>106.912439771</td><td>4.53019620398</td><td>0.96</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>19.9224560877</td><td>0.0675990946847</td><td>18.8274293991</td><td>0.0460058534243</td><td>False</td></tr>\n",
        "<tr><td>1</td><td>1214933</td><td>244.3568698</td><td>54.2538341</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>25.1660275731</td><td>2.08235665528</td><td>122.247397842</td><td>54.5416272661</td><td>0.63</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>20.3979633297</td><td>0.0898389706238</td><td>18.6819009412</td><td>0.48440965153</td><td>False</td></tr>\n",
@@ -247,7 +247,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['ferr_app_servs_irac1', 'ferr_app_servs_irac2']\n",
+    "SORT_COLS = ['ferr_ap_servs_irac1', 'ferr_ap_servs_irac2']\n",
     "FLAG_NAME = \"servs_flag_cleaned\"\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
