--- a/dmu1/dmu1_ml_ELAIS-N1/1.7_SWIRE.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/1.7_SWIRE.ipynb
@@ -101,23 +101,23 @@
     "        'internal_id': \"swire_intid\",\n",
     "        'ra_spitzer': \"swire_ra\",\n",
     "        'dec_spitzer': \"swire_dec\",\n",
-    "        'flux_ap2_36': \"f_app_swire_irac1\",\n",
-    "        'uncf_ap2_36': \"ferr_app_swire_irac1\",\n",
+    "        'flux_ap2_36': \"f_ap_swire_irac1\",\n",
+    "        'uncf_ap2_36': \"ferr_ap_swire_irac1\",\n",
     "        'flux_kr_36': \"f_swire_irac1\",\n",
     "        'uncf_kr_36': \"ferr_swire_irac1\",\n",
     "        'stell_36': \"swire_stellarity_irac1\",\n",
-    "        'flux_ap2_45': \"f_app_swire_irac2\",\n",
-    "        'uncf_ap2_45': \"ferr_app_swire_irac2\",\n",
+    "        'flux_ap2_45': \"f_ap_swire_irac2\",\n",
+    "        'uncf_ap2_45': \"ferr_ap_swire_irac2\",\n",
     "        'flux_kr_45': \"f_swire_irac2\",\n",
     "        'uncf_kr_45': \"ferr_swire_irac2\",\n",
     "        'stell_45': \"swire_stellarity_irac2\",\n",
-    "        'flux_ap2_58': \"f_app_irac3\",\n",
-    "        'uncf_ap2_58': \"ferr_app_irac3\",\n",
+    "        'flux_ap2_58': \"f_ap_irac3\",\n",
+    "        'uncf_ap2_58': \"ferr_ap_irac3\",\n",
     "        'flux_kr_58': \"f_irac3\",\n",
     "        'uncf_kr_58': \"ferr_irac3\",\n",
     "        'stell_58': \"swire_stellarity_irac3\",\n",
-    "        'flux_ap2_80': \"f_app_irac4\",\n",
-    "        'uncf_ap2_80': \"ferr_app_irac4\",\n",
+    "        'flux_ap2_80': \"f_ap_irac4\",\n",
+    "        'uncf_ap2_80': \"ferr_ap_irac4\",\n",
     "        'flux_kr_80': \"f_irac4\",\n",
     "        'uncf_kr_80': \"ferr_irac4\",\n",
     "        'stell_80': \"swire_stellarity_irac4\",\n",
@@ -176,7 +176,7 @@
       "text/html": [
        "&lt;Table masked=True length=10&gt;\n",
        "<table id=\"table140571161063720-938397\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>swire_intid</th><th>swire_ra</th><th>swire_dec</th><th>f_app_swire_irac1</th><th>ferr_app_swire_irac1</th><th>f_swire_irac1</th><th>ferr_swire_irac1</th><th>swire_stellarity_irac1</th><th>f_app_swire_irac2</th><th>ferr_app_swire_irac2</th><th>f_swire_irac2</th><th>ferr_swire_irac2</th><th>swire_stellarity_irac2</th><th>f_app_irac3</th><th>ferr_app_irac3</th><th>f_irac3</th><th>ferr_irac3</th><th>swire_stellarity_irac3</th><th>f_app_irac4</th><th>ferr_app_irac4</th><th>f_irac4</th><th>ferr_irac4</th><th>swire_stellarity_irac4</th><th>m_ap_swire_irac1</th><th>merr_ap_swire_irac1</th><th>m_swire_irac1</th><th>merr_swire_irac1</th><th>flag_swire_irac1</th><th>m_ap_swire_irac2</th><th>merr_ap_swire_irac2</th><th>m_swire_irac2</th><th>merr_swire_irac2</th><th>flag_swire_irac2</th><th>m_ap_irac3</th><th>merr_ap_irac3</th><th>m_irac3</th><th>merr_irac3</th><th>flag_irac3</th><th>m_ap_irac4</th><th>merr_ap_irac4</th><th>m_irac4</th><th>merr_irac4</th><th>flag_irac4</th></tr></thead>\n",
+       "<thead><tr><th>idx</th><th>swire_intid</th><th>swire_ra</th><th>swire_dec</th><th>f_ap_swire_irac1</th><th>ferr_ap_swire_irac1</th><th>f_swire_irac1</th><th>ferr_swire_irac1</th><th>swire_stellarity_irac1</th><th>f_ap_swire_irac2</th><th>ferr_ap_swire_irac2</th><th>f_swire_irac2</th><th>ferr_swire_irac2</th><th>swire_stellarity_irac2</th><th>f_ap_irac3</th><th>ferr_ap_irac3</th><th>f_irac3</th><th>ferr_irac3</th><th>swire_stellarity_irac3</th><th>f_ap_irac4</th><th>ferr_ap_irac4</th><th>f_irac4</th><th>ferr_irac4</th><th>swire_stellarity_irac4</th><th>m_ap_swire_irac1</th><th>merr_ap_swire_irac1</th><th>m_swire_irac1</th><th>merr_swire_irac1</th><th>flag_swire_irac1</th><th>m_ap_swire_irac2</th><th>merr_ap_swire_irac2</th><th>m_swire_irac2</th><th>merr_swire_irac2</th><th>flag_swire_irac2</th><th>m_ap_irac3</th><th>merr_ap_irac3</th><th>m_irac3</th><th>merr_irac3</th><th>flag_irac3</th><th>m_ap_irac4</th><th>merr_ap_irac4</th><th>m_irac4</th><th>merr_irac4</th><th>flag_irac4</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>584549</td><td>246.55273</td><td>54.990584</td><td>15.81</td><td>1.34</td><td>17.25</td><td>1.63</td><td>0.46</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>20.9026703252</td><td>0.09202318244</td><td>20.8080272515</td><td>0.102594203696</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td></tr>\n",
        "<tr><td>1</td><td>584511</td><td>246.552</td><td>54.989464</td><td>14.17</td><td>1.32</td><td>18.1</td><td>4.47</td><td>0.09</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>21.0215753744</td><td>0.101141269603</td><td>20.7558035628</td><td>0.268134852777</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td></tr>\n",
@@ -260,7 +260,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['ferr_app_swire_irac1', 'ferr_app_swire_irac2', 'ferr_app_irac3', 'ferr_app_irac4']\n",
+    "SORT_COLS = ['ferr_ap_swire_irac1', 'ferr_ap_swire_irac2', 'ferr_ap_irac3', 'ferr_ap_irac4']\n",
     "FLAG_NAME = \"swire_flag_cleaned\"\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
