--- a/dmu28/dmu28_COSMOS/COSMOS_diagnostic_of_SED_fitting.ipynb
+++ b/dmu28/dmu28_COSMOS/COSMOS_diagnostic_of_SED_fitting.ipynb
@@ -296,7 +296,7 @@
     "\n",
     "We check our Ldust results by comparion with SED fitting based on the FIR data only (the same parameters were used but as a dataset only FIR data were introcuded).\n",
     "\n",
-    "Figure below shows a very goog comparison between both runs:\n",
+    "Figure below shows a very good comparison between both runs (the comparison was performed for galaxies which fulfil $\chi^2$s criteria:\n",
     "\n"
    ]
   },
