--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VIKS82.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VIKS82.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ELAIS-N1 master catalogue\n",
-    "## Preparation of Isaac Newton Telescope / Wide Field Camera (INT/WFC) data\n",
+    "# Herschel Stripe 82 master catalogue\n",
+    "## Preparation of VISTA/CFHT Telescope / VIRCAM/WIRCAM Camera data\n",
     "\n",
-    "Isaac Newton Telescope / Wide Field Camera (INT/WFC) catalogue: the catalogue comes from `dmu0_INTWFC`.\n",
+    "VISTA/CFHT Telescope / VIRCAM/WIRCAM Camera VICS82 catalogue: the catalogue comes from `dmu0_VICS82`.\n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
     "- The identifier (it's unique in the catalogue);\n",
     "- The position;\n",
     "- The stellarity;\n",
-    "- The magnitude for each band in apertude 4 ($1.2 * \\sqrt{2}$ arcsec = 1.7 arcsec).\n",
+    "- The magnitude for each band.\n",
     "- The kron magnitude to be used as total magnitude (no “auto” magnitude is provided).\n",
     "\n",
     "We don't know when the maps have been observed. We will use the year of the reference paper."
@@ -91,8 +91,8 @@
     "except FileExistsError:\n",
     "    pass\n",
     "\n",
-    "RA_COL = \"wfc_ra\"\n",
-    "DEC_COL = \"wfc_dec\""
+    "RA_COL = \"vics82_ra\"\n",
+    "DEC_COL = \"vics82_dec\""
    ]
   },
   {
@@ -111,34 +111,19 @@
    "outputs": [],
    "source": [
     "imported_columns = OrderedDict({\n",
-    "        'id': \"wfc_id\",\n",
-    "        'ra': \"wfc_ra\",\n",
-    "        'decl': \"wfc_dec\",\n",
-    "        'pstar':  \"wfc_stellarity\",\n",
-    "        'umag4': \"m_app_wfc_u\", \n",
-    "        'uemag4': \"merr_app_wfc_u\", \n",
-    "        'ukronmag': \"m_wfc_u\", \n",
-    "        'uekronmag': \"merr_wfc_u\",\n",
-    "        'gmag4': \"m_app_wfc_g\", \n",
-    "        'gemag4': \"merr_app_wfc_g\", \n",
-    "        'gkronmag': \"m_wfc_g\", \n",
-    "        'gekronmag': \"merr_wfc_g\",\n",
-    "        'rmag4': \"m_app_wfc_r\", \n",
-    "        'remag4': \"merr_app_wfc_r\", \n",
-    "        'rkronmag': \"m_wfc_r\", \n",
-    "        'rekronmag': \"merr_wfc_r\",\n",
-    "        'imag4': \"m_app_wfc_i\", \n",
-    "        'iemag4': \"merr_app_wfc_i\", \n",
-    "        'ikronmag': \"m_wfc_i\", \n",
-    "        'iekronmag': \"merr_wfc_i\",\n",
-    "        'zmag4': \"m_app_wfc_z\", \n",
-    "        'zemag4': \"merr_app_wfc_z\", \n",
-    "        'zkronmag': \"m_wfc_z\", \n",
-    "        'zekronmag': \"merr_wfc_z\"\n",
-    "    })\n",
+    "        'VICS82ID': \"vics82_id\",\n",
+    "        'ra': \"vics82_ra\",\n",
+    "        'dec': \"vics82_dec\",\n",
+    "        'CLASS_STAR':  \"vics82_stellarity\",\n",
+    "        'MAGAUTO': \"m_vics82_k\", \n",
+    "        'MAG_APER': \"m_ap_vics82_k\",  #TODO take one of list\n",
+    "        'JMAG_AUTO': \"m_vics82_j\", \n",
+    "        'JMAG_APER': \"m_ap_vics82_j\",  #TODO take one of list\n",
+    "})\n",
     "\n",
+    "#No error column?\n",
     "\n",
-    "catalogue = Table.read(\"../../dmu0/dmu0_INTWFC/data/en1_intwfc_v2.1_HELP_coverage.fits\")[list(imported_columns)]\n",
+    "catalogue = Table.read(\"../../dmu0/dmu0_VICS82/data/VICS82_FULL_SDSS_FEB2017_K22_HELP-coverage_intIDs.fits\")[list(imported_columns)]\n",
     "for column in imported_columns:\n",
     "    catalogue[column].name = imported_columns[column]\n",
     "\n",
@@ -277,8 +262,8 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_app_wfc_r', 'merr_app_wfc_u', 'merr_app_wfc_g', 'merr_app_wfc_z']\n",
-    "FLAG_NAME = 'wfc_flag_cleaned'\n",
+    "SORT_COLS = ['m_ap_vics82_j', 'm_ap_vics82_k']\n",
+    "FLAG_NAME = 'vics82_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
     "\n",
@@ -308,7 +293,7 @@
    },
    "outputs": [],
    "source": [
-    "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_ELAIS-N1.fits\")\n",
+    "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_Herschel-Stripe-82.fits\")\n",
     "gaia_coords = SkyCoord(gaia['ra'], gaia['dec'])"
    ]
   },
@@ -452,7 +437,7 @@
     }
    ],
    "source": [
-    "GAIA_FLAG_NAME = \"wfc_flag_gaia\"\n",
+    "GAIA_FLAG_NAME = \"vics82_flag_gaia\"\n",
     "\n",
     "catalogue['flag_gaia'].name = GAIA_FLAG_NAME\n",
     "print(\"{} sources flagged.\".format(np.sum(catalogue[GAIA_FLAG_NAME] > 0)))"
@@ -480,7 +465,7 @@
    },
    "outputs": [],
    "source": [
-    "catalogue.write(\"{}/INT-WFC.fits\".format(OUT_DIR), overwrite=True)"
+    "catalogue.write(\"{}/VICS82.fits\".format(OUT_DIR), overwrite=True)"
    ]
   }
  ],
@@ -501,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
