--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VIKS82.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VIKS82.ipynb
@@ -130,7 +130,12 @@
     "epoch = 2011\n",
     "\n",
     "# Clean table metadata\n",
-    "catalogue.meta = None"
+    "catalogue.meta = None\n",
+    "\n",
+    "#replace list of aperture magnitudes with appropriate choise from list\n",
+    "catalogue[\"m_ap_vics82_k\"] = catalogue[\"m_ap_vics82_k\"][]\n",
+    "catalogue[\"m_ap_vics82_j\"] = catalogue[\"m_ap_vics82_j\"][]\n",
+    "# TODO: Check this works as expected."
    ]
   },
   {
@@ -154,7 +159,11 @@
     "for col in catalogue.colnames:\n",
     "    if col.startswith('m_'):\n",
     "        \n",
+    "        # Add err col with all nan values because errors absent\n",
     "        errcol = \"merr{}\".format(col[1:])\n",
+    "        nan_values = np.empty(len(catalogue))\n",
+    "        nan_values[:] = np.NAN\n",
+    "        catalogue.add_column(Column(nan_values, name=errcol))\n",
     "        \n",
     "        # Some object have a magnitude to 0, we suppose this means missing value\n",
     "        catalogue[col][catalogue[col] <= 0] = np.nan\n",
@@ -168,7 +177,7 @@
     "        catalogue.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
     "        \n",
     "        # Band-flag column\n",
-    "        if \"app\" not in col:\n",
+    "        if \"ap\" not in col:\n",
     "            catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
     "        \n",
     "# TODO: Set to True the flag columns for fluxes that should not be used for SED fitting."
