fixed column name in HS82 VHS

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.2_VISTA-VHS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.2_VISTA-VHS.ipynb
@@ -128,10 +128,10 @@
     "        'HPETROMAGERR': \"merr_vhs_h\", \n",
     "        'HAPERMAG3': \"m_ap_vhs_h\", \n",
     "        'HAPERMAG3ERR': \"merr_ap_vhs_h\",        \n",
-    "        'KPETROMAG': \"m_vhs_k\", \n",
-    "        'KPETROMAGERR': \"merr_vhs_k\", \n",
-    "        'KAPERMAG3': \"m_ap_vhs_k\", \n",
-    "        'KAPERMAG3ERR': \"merr_ap_vhs_k\",\n",
+    "        'KSPETROMAG': \"m_vhs_k\", \n",
+    "        'KSPETROMAGERR': \"merr_vhs_k\", \n",
+    "        'KSAPERMAG3': \"m_ap_vhs_k\", \n",
+    "        'KSAPERMAG3ERR': \"merr_ap_vhs_k\",\n",
     "    })\n",
     "\n",
     "\n",
