--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.2_VISTA-VHS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.2_VISTA-VHS.ipynb
@@ -180,7 +180,7 @@
     "        catalogue.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
     "        \n",
     "        # Band-flag column\n",
-    "        if \"app\" not in col:\n",
+    "        if \"ap\" not in col:\n",
     "            catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
     "        \n",
     "# TODO: Set to True the flag columns for fluxes that should not be used for SED fitting."
@@ -274,7 +274,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_app_vhs_y', 'merr_app_vhs_h', 'merr_app_vhs_j', 'merr_app_vhs_k']\n",
+    "SORT_COLS = ['merr_ap_vhs_y', 'merr_ap_vhs_h', 'merr_ap_vhs_j', 'merr_ap_vhs_k']\n",
     "FLAG_NAME = 'vhs_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
