trying array manipulation on VICS82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VIKS82.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VIKS82.ipynb
@@ -9,15 +9,16 @@
     "\n",
     "VISTA/CFHT Telescope / VIRCAM/WIRCAM Camera VICS82 catalogue: the catalogue comes from `dmu0_VICS82`.\n",
     "\n",
+    "The catalogue is described here: https://arxiv.org/pdf/1705.05451.pdf\n",
+    "\n",
     "In the catalogue, we keep:\n",
     "\n",
     "- The identifier (it's unique in the catalogue);\n",
     "- The position;\n",
     "- The stellarity;\n",
     "- The magnitude for each band.\n",
-    "- The kron magnitude to be used as total magnitude (no “auto” magnitude is provided).\n",
-    "\n",
-    "We don't know when the maps have been observed. We will use the year of the reference paper."
+    "- The auto magnitude to be used as total magnitude .\n",
+    "\n"
    ]
   },
   {
@@ -116,9 +117,9 @@
     "        'dec': \"vics82_dec\",\n",
     "        'CLASS_STAR':  \"vics82_stellarity\",\n",
     "        'MAGAUTO': \"m_vics82_k\", \n",
-    "        'MAG_APER': \"m_ap_vics82_k\",  #TODO take one of list\n",
+    "        'MAG_APER': \"m_ap_vics82_k\", \n",
     "        'JMAG_AUTO': \"m_vics82_j\", \n",
-    "        'JMAG_APER': \"m_ap_vics82_j\",  #TODO take one of list\n",
+    "        'JMAG_APER': \"m_ap_vics82_j\", \n",
     "})\n",
     "\n",
     "#No error column?\n",
@@ -132,9 +133,10 @@
     "# Clean table metadata\n",
     "catalogue.meta = None\n",
     "\n",
-    "#replace list of aperture magnitudes with appropriate choise from list\n",
-    "catalogue[\"m_ap_vics82_k\"] = catalogue[\"m_ap_vics82_k\"][]\n",
-    "catalogue[\"m_ap_vics82_j\"] = catalogue[\"m_ap_vics82_j\"][]\n",
+    "#replace list of aperture magnitudes with appropriate choice from list\n",
+    "# Apertures (1\", 1.5\", 2\", 2.5\" and 3\"\n",
+    "catalogue[\"m_ap_vics82_k\"] = catalogue[\"m_ap_vics82_k\"][:,2]\n",
+    "catalogue[\"m_ap_vics82_j\"] = catalogue[\"m_ap_vics82_j\"][:,2]\n",
     "# TODO: Check this works as expected."
    ]
   },
